alignent correction on getfit.html

--- a/css/app.css
+++ b/css/app.css
@@ -97,7 +97,7 @@ h2 {
   display: grid;
   grid-area: hom;
   grid-template-columns: 1fr;
-  padding: 150px 50px; 
+  padding: 50px 25px; 
   text-align: center;
   justify-content: center;
   align-items: center;
@@ -330,19 +330,24 @@ footer {
 
 #getfit {
   display: grid;
-  padding: 50px 100px;
+  padding: 50px;
   height: 100%;
   width: 100%;
   place-items: center; 
   background-color: #333;
 }
-  #getfitIntro {
-    margin-top: 50px;
-  }
-  .getfitImages {
-    height: 450px;
-    margin: 25px;
-  }
+
+#getfitIntro {
+  margin-top: 50px;
+}
+
+.getfitImages {
+  height: 450px;
+  margin: 25px;
+  display: grid; 
+  justify-content: center; 
+  align-items: center;
+}
 
 @media (max-width: 768px) {
   body {
